tdf#76183: recalculate objects' positions on optimal height recalc

Unit test included

Change-Id: I933ba4802b212400cc47ed0fb7e1f8f44049bb81